Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -122,10 +122,11 @@
         <p data-translate-key="global.footerCopyright">© 2024 Painted by Sara. Alle Rechte vorbehalten.</p>
     </footer>
 
-    <script src="/js/config-loader.js"></script>
-    <script src="/js/slider.js"></script>
+    <script src="js/config-loader.js"></script>
+    <script src="js/slider.js"></script>
 </body>
 
 
 </html>
+
 
