--- a/booking.html
+++ b/booking.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-translate-key="booking.pageTitle">Booking & Preise</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -88,8 +88,9 @@
         <p data-translate-key="global.footerCopyright">© 2024 Painted by Sara. Alle Rechte vorbehalten.</p>
     </footer>
 
-    <script src="/js/config-loader.js"></script>
-    <script src="/js/booking.js"></script>
+    <script src="js/config-loader.js"></script>
+    <script src="js/booking.js"></script>
 </body>
+
 
 </html>
