--- a/booking.html
+++ b/booking.html
@@ -21,7 +21,7 @@
             <a href="index.html" class="logo" data-translate-key="global.siteTitle">PAINTED BY SARA</a>
             <ul>
                 <li><a href="index.html" data-translate-key="global.navHome">Startseite</a></li>
-                <li><a href="booking.html" class="active" data-translate-key="global.navBooking">Booking & Preise</a>
+                <li><a href="booking.html" class="active" data-translate-key="global.navBooking">Booking</a>
                 </li>
                 <li><a href="galerija.html" data-translate-key="global.navGallery">Galerie</a></li>
                 <li><a href="#contact" data-translate-key="global.navContact">Kontakt</a></li>
@@ -94,3 +94,4 @@
 
 
 </html>
+
