WIP on main: 41854fb Merge branch 'main' of https://github.com/tpktehnoco-byte/MakeUpWeb

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="index.html" class="logo" data-translate-key="global.siteTitle">PAINTED BY SARA</a>
             <ul>
                 <li><a href="index.html" class="active" data-translate-key="global.navHome">Startseite</a></li>
-                <li><a href="booking.html" data-translate-key="global.navBooking">Booking & Preise</a></li>
+                <li><a href="booking.html" data-translate-key="global.navBooking">Booking</a></li>
                 <li><a href="galerija.html" data-translate-key="global.navGallery">Galerie</a></li>
                 <li><a href="#contact" data-translate-key="global.navContact">Kontakt</a></li>
             </ul>
