--- a/booking.html
+++ b/booking.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@300;400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@300;400;700&family=Lato:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -18,34 +18,36 @@
 
     <header>
         <nav>
-            <a href="index.html" class="logo" data-translate-key="global.siteTitle">PAINTED BY SARA</a>
+            <a href="index.html" class="logo">
+                <img src="images/logoB320.png" alt="Painted by Sara Logo" class="logo-img">
+            </a>
             <ul>
                 <li><a href="index.html" data-translate-key="global.navHome">Startseite</a></li>
-                <li><a href="booking.html" class="active" data-translate-key="global.navBooking">Booking</a>
+                <li><a href="booking.html" class="active" data-translate-key="global.navBooking">Booking & Preise</a>
                 </li>
                 <li><a href="galerija.html" data-translate-key="global.navGallery">Galerie</a></li>
                 <li><a href="#contact" data-translate-key="global.navContact">Kontakt</a></li>
             </ul>
-
+            <select id="language-switcher">
+                <option value="de">DE</option>
+                <option value="en">EN</option>
+                <option value="exyu">EXYU</option>
+            </select>
         </nav>
     </header>
 
     <main class="booking-main">
-
         <div class="container">
-
-
             <h1 data-translate-key="booking.pageTitle">Booking & Preise</h1>
             <p data-translate-key="booking.introText">Wählen Sie das Paket, das am besten zu Ihren Bedürfnissen passt.
             </p>
+
             <div id="packages-container" class="packages-grid">
                 <!-- Paketi će biti dinamički ubačeni ovde -->
             </div>
-
         </div>
     </main>
 
-    <!-- Modal za formular (početno sakriven) -->
     <div id="booking-modal" class="modal">
         <div class="modal-content">
             <span class="close-btn">&times;</span>
@@ -78,23 +80,18 @@
         </div>
     </div>
 
-    <!-- Poruka o uspehu (početno sakrivena) -->
     <div id="success-message" class="success-message">
         <p data-translate-key="booking.successMessage">Ihre Anfrage wurde erfolgreich gesendet!</p>
     </div>
 
     <footer>
-        <select id="language-switcher">
-            <option value="de">DE</option>
-            <option value="en">EN</option>
-            <option value="exyu">EXYU</option>
-        </select>
-        <p data-translate-key="global.footerCopyright">© 2024 Painted by Sara. Alle Rechte vorbehalten.</p>
+        <div class="container">
+            <p data-translate-key="global.footerCopyright">© 2024 Painted by Sara. Alle Rechte vorbehalten.</p>
+        </div>
     </footer>
 
     <script src="js/config-loader.js"></script>
     <script src="js/booking.js"></script>
 </body>
-
 
 </html>
